--- a/novaBatida.html
+++ b/novaBatida.html
@@ -18,6 +18,7 @@
 	
 	function documentReady() {
 		let aNewDate = new Date();
+		alert(aNewDate);
 	}
 	
 	// Your Client ID can be retrieved from your project in the Google
