--- a/novaBatida.html
+++ b/novaBatida.html
@@ -4,7 +4,11 @@
 		<title>Nova Batida de Ponto</title>
 	</head>
 	<body>
-	
+	    <div id="authorize-div" style="display: none">
+ 		<span>Authorize access to Google Apps Script Execution API</span>
+ 		<!--Button for the user to click to initiate auth sequence -->
+ 		<button id="authorize-button" onclick="handleAuthClick(event)">Authorize</button>
+            </div>
 	</body>
 	<script type="text/javascript">
 	document.addEventListener('DOMContentLoaded', documentReady);
