--- a/novaBatida.html
+++ b/novaBatida.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Nova Batida de Ponto</title>
-		<script src="https://apis.google.com/js/client.js?onload=checkAuth">
+		<script src="https://apis.google.com/js/client.js">
 	</head>
 	<body>
 	    <div id="authorize-div" style="display: none">
