--- a/novaBatida.html
+++ b/novaBatida.html
@@ -18,123 +18,123 @@
 		alert(aNewDate);
 	}
 	
-	-	// Your Client ID can be retrieved from your project in the Google
- -    // Developer Console, https://console.developers.google.com
- -    var CLIENT_ID = '850821780363-08pi825a2ha7k7bo9fhisv71mc4qaqdb.apps.googleusercontent.com';
+		// Your Client ID can be retrieved from your project in the Google
+     // Developer Console, https://console.developers.google.com
+    var CLIENT_ID = '850821780363-08pi825a2ha7k7bo9fhisv71mc4qaqdb.apps.googleusercontent.com';
   
- -    var SCOPES = ['https://www.googleapis.com/auth/script.scriptapp','https://www.googleapis.com/auth/spreadsheets'];
- -
- -    /**
- -    * Check if current user has authorized this application.
- -    */
- -    function checkAuth() {
- -		gapi.auth.authorize(
- -		{
- -			'client_id': CLIENT_ID,
- -			'scope': SCOPES.join(' '),
- -			'immediate': true
- -		}, 
- -		handleAuthResult);
- -      }
- -
- -	/**
- -	* Handle response from authorization server.
- -	*
- -	* @param {Object} authResult Authorization result.
- -	*/
- -	function handleAuthResult(authResult) {
- -		var authorizeDiv = document.getElementById('authorize-div');
- -		if (authResult && !authResult.error) {
- -			// Hide auth UI, then load client library.
- -			authorizeDiv.style.display = 'none';
- -			baterPonto();
- -		} else {
- -			// Show auth UI, allowing the user to initiate authorization by
- -			// clicking authorize button.
- -			authorizeDiv.style.display = 'inline';
- -		}
- -	}
- -
- -	/**
- -	* Initiate auth flow in response to user clicking authorize button.
- -	*
- -	* @param {Event} event Button click event.
- -	*/
- -	function handleAuthClick(event) {
- -		gapi.auth.authorize(
- -			{
- -				client_id: CLIENT_ID,
- -				scope: SCOPES,
- -				immediate: false
- -			},
- -			handleAuthResult
- -		);
- -		return false;
- -	}
- -
- -	/**
- -	* Calls the Apps Script function
- -	*/
- -	function baterPonto() {
- -		var scriptId = "1jmGAbkmjxVGht8aePqEzNzTGfAeY1YGRBYvb919xRqyEgZRBC3eimely";
- -		var horario = new Date()
- -		.getTime();
- -		
- -		// Create an execution request object.
- -		var request = {
- -			'function': 'execAPI',
- -			"parameters": [horario],
- -		};
- -
- -		// Make the API request.
- -		var op = gapi.client.request({
- -			'root': 'https://script.googleapis.com',
- -			'path': 'v1/scripts/' + scriptId + ':run',
- -			'method': 'POST',
- -			'body': request
- -		});
- -
- -		op.execute(function(resp) {
- -			if (resp.error && resp.error.status) {
- -				// The API encountered a problem before the script
- -				// started executing.
- -				appendPre('Error calling API:');
- -				appendPre(JSON.stringify(resp, null, 2));
- -			} else if (resp.error) {
- -				// The API executed, but the script returned an error.
- -
- -				// Extract the first (and only) set of error details.
- -				// The values of this object are the script's 'errorMessage' and
- -				// 'errorType', and an array of stack trace elements.
- -				var error = resp.error.details[0];
- -				appendPre('Script error message: ' + error.errorMessage);
- -
- -				if (error.scriptStackTraceElements) {
- -					// There may not be a stacktrace if the script didn't start
- -					// executing.
- -					appendPre('Script error stacktrace:');
- -					for (var i = 0; i < error.scriptStackTraceElements.length; i++) {
- -						var trace = error.scriptStackTraceElements[i];
- -						appendPre('\t' + trace.function + ':' + trace.lineNumber);
- -					}
- -				}
- -			} else {
- -				// Return SUCCESSFUL
- -			}
- -		});
- -	}
- -	
- -	/**
- -	* Append a pre element to the body containing the given message
- -	* as its text node.
- -	*
- -	* @param {string} message Text to be placed in pre element.
- -	*/
- -	function appendPre(message) {
- -		var pre = document.getElementById('output');
- -		var textContent = document.createTextNode(message + '\n');
- -		pre.appendChild(textContent);
- -	}
+    var SCOPES = ['https://www.googleapis.com/auth/script.scriptapp','https://www.googleapis.com/auth/spreadsheets'];
+
+    /**
+    * Check if current user has authorized this application.
+    */
+    function checkAuth() {
+		gapi.auth.authorize(
+		{
+			'client_id': CLIENT_ID,
+			'scope': SCOPES.join(' '),
+			'immediate': true
+		}, 
+		handleAuthResult);
+      }
+
+	/**
+	* Handle response from authorization server.
+	*
+	* @param {Object} authResult Authorization result.
+	*/
+	function handleAuthResult(authResult) {
+		var authorizeDiv = document.getElementById('authorize-div');
+		if (authResult && !authResult.error) {
+			// Hide auth UI, then load client library.
+			authorizeDiv.style.display = 'none';
+			baterPonto();
+		} else {
+			// Show auth UI, allowing the user to initiate authorization by
+			// clicking authorize button.
+			authorizeDiv.style.display = 'inline';
+		}
+	}
+
+	/**
+	* Initiate auth flow in response to user clicking authorize button.
+	*
+	* @param {Event} event Button click event.
+	*/
+	function handleAuthClick(event) {
+		gapi.auth.authorize(
+			{
+				client_id: CLIENT_ID,
+				scope: SCOPES,
+				immediate: false
+			},
+			handleAuthResult
+		);
+		return false;
+	}
+
+	/**
+	* Calls the Apps Script function
+	*/
+	function baterPonto() {
+		var scriptId = "1jmGAbkmjxVGht8aePqEzNzTGfAeY1YGRBYvb919xRqyEgZRBC3eimely";
+		var horario = new Date()
+		.getTime();
+		
+		// Create an execution request object.
+		var request = {
+			'function': 'execAPI',
+			"parameters": [horario],
+		};
+
+		// Make the API request.
+		var op = gapi.client.request({
+			'root': 'https://script.googleapis.com',
+			'path': 'v1/scripts/' + scriptId + ':run',
+			'method': 'POST',
+			'body': request
+		});
+
+		op.execute(function(resp) {
+			if (resp.error && resp.error.status) {
+				// The API encountered a problem before the script
+				// started executing.
+				appendPre('Error calling API:');
+				appendPre(JSON.stringify(resp, null, 2));
+			} else if (resp.error) {
+				// The API executed, but the script returned an error.
+
+				// Extract the first (and only) set of error details.
+				// The values of this object are the script's 'errorMessage' and
+				// 'errorType', and an array of stack trace elements.
+				var error = resp.error.details[0];
+				appendPre('Script error message: ' + error.errorMessage);
+
+				if (error.scriptStackTraceElements) {
+					// There may not be a stacktrace if the script didn't start
+					// executing.
+					appendPre('Script error stacktrace:');
+					for (var i = 0; i < error.scriptStackTraceElements.length; i++) {
+						var trace = error.scriptStackTraceElements[i];
+						appendPre('\t' + trace.function + ':' + trace.lineNumber);
+					}
+				}
+			} else {
+				// Return SUCCESSFUL
+			}
+		});
+	}
 	
+	/**
+	* Append a pre element to the body containing the given message
+	* as its text node.
+	*
+	* @param {string} message Text to be placed in pre element.
+	*/
+	function appendPre(message) {
+		var pre = document.getElementById('output');
+		var textContent = document.createTextNode(message + '\n');
+		pre.appendChild(textContent);
+	}
+
 	</script>
 </html>
