--- a/novaBatida.html
+++ b/novaBatida.html
@@ -137,5 +137,5 @@
 	}
 
 	</script>
-	<script src="https://apis.google.com/js/api.js">
+	<script src="https://apis.google.com/js/client.js">
 </html>
