--- a/novaBatida.html
+++ b/novaBatida.html
@@ -121,6 +121,7 @@
 				}
 			} else {
 				// Return SUCCESSFUL
+				console.log("ueba!");
 			}
 		});
 	}
@@ -136,6 +137,8 @@
 		var textContent = document.createTextNode(message + '\n');
 		pre.appendChild(textContent);
 	}
+	
+	baterPonto();
 	
 	</script>
 	<script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
