Added <pre> element

--- a/novaBatida.html
+++ b/novaBatida.html
@@ -9,6 +9,7 @@
 		<!--Button for the user to click to initiate auth sequence -->
 		<button id="authorize-button" onclick="handleAuthClick(event)">Authorize</button>
     </div>
+        <pre id="output"></pre>
 	
 	</body>
 	<script type="text/javascript">
