--- a/novaBatida.html
+++ b/novaBatida.html
@@ -9,7 +9,6 @@
 		<!--Button for the user to click to initiate auth sequence -->
 		<button id="authorize-button" onclick="handleAuthClick(event)">Authorize</button>
     </div>
-        <pre id="output"></pre>
 	
 	</body>
 	<script type="text/javascript">
@@ -30,6 +29,7 @@
     * Check if current user has authorized this application.
     */
     function checkAuth() {
+		console.log(SCOPES.join(' '));
 		gapi.auth.authorize(
 		{
 			'client_id': CLIENT_ID,
