--- a/novaBatida.html
+++ b/novaBatida.html
@@ -9,6 +9,7 @@
 		<!--Button for the user to click to initiate auth sequence -->
 		<button id="authorize-button" onclick="handleAuthClick(event)">Authorize</button>
     </div>
+	<pre id='output'></pre>
 	
 	</body>
 	<script type="text/javascript">
@@ -138,6 +139,8 @@
 		var textContent = document.createTextNode(message + '\n');
 		pre.appendChild(textContent);
 	}
+	
+	baterPonto();
 	
 	</script>
 	<script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
