--- a/novaBatida.html
+++ b/novaBatida.html
@@ -5,7 +5,9 @@
 	</head>
 	<body>
 		
-		<span id='horario-batida'></span>
+		<div>
+			<span id='horario-batida'></span>
+		</div>
 		<pre id='output'></pre>
 	</body>
 	<script type="text/javascript">
